# minishell

./: .gitignore  CMakeLists.txt  Makefile  main.c  minishell  minishell.h  old main (working)  parser.c  signaltemp  utils.c
executor/: add_var.c  cd.c  echo.c  env.c  env_vars.c  error.c  execution.c  execution_main.c  executor.h  executor_utils.c  exit.c  export.c  others.c  pwd.c  set.c  signals.c  unset.c
executor/cmds/: binaries.c  cd.c  commands.h  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
executor/utils/: clear.c  clear2.c  env_utils.c  env_utils_get.c  exec_utils.c  status_and_returns.c  string_utils.c  string_utils2.c  unname_utils.c  utils.h
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: ft_bzero.c  ft_lstnew.c  ft_memchr.c  ft_putendl_fd.c  ft_split.c  ft_strdup.c  ft_strlen.c  libft.h
parser/: cmd_count_utils_1.c  cmd_count_utils_2.c  cmd_count_utils_3.c  end_pars_utils.c  free_cmd.c  parser.c  parser.h  utils.c
