project(minishell)
cmake_minimum_required(VERSION 3.12)
set(CMAKE_C_STANDARD 99)

set(CMAKE_C_FLAGS "-D BUFFER_SIZE=128")
file(GLOB srcs "*.c")
file(GLOB gnl "./get_next_line/*.c")
file(GLOB executor "./executor/*.c")
file(GLOB parser "./parser/*.c")
file(GLOB libft "./libft/*.c")
file(GLOB printf "./ft_printf/*.c")
include_directories(libft/)
include_directories(get_next_line/)
include_directories(executor/)
include_directories(parser/)
include_directories(/usr/local/include)
add_executable(minishell ${srcs} ${gnl} ${executor} ${parser} ${libft} ${printf})